k8s/express-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: express-server
  template:
    metadata:
      labels:
        component: express-server
    spec:
      containers:
        - name: express-server
          image: singhabhinav/express-server-k8
          ports:
            - containerPort: 5000
