k8s/express-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: express-server
  ports:
    - port: 5000
      targetPort: 5000
